@@ -4,7 +4,10 @@ if BUILD_GTK
   GTK_SUBDIR = gtk
 endif
 
-SUBDIRS = codegen . $(GTK_SUBDIR) examples tests docs
+SUBDIRS = codegen . $(GTK_SUBDIR) examples tests
+if !OS_WIN32
+SUBDIRS += docs
+endif
 
 PLATFORM_VERSION = 2.0
 
@@ -53,7 +56,7 @@ pkgpyexec_LTLIBRARIES =
 # linker flags
 common_ldflags = -module -avoid-version
 if PLATFORM_WIN32
-common_ldflags += -no-undefined
+common_ldflags += -no-undefined -shrext ".pyd"
 endif
 
 # atk module
@@ -63,7 +66,7 @@ CLEANFILES += atk.c
 EXTRA_DIST += $(ATK_DEFS) $(ATK_OVERRIDES)
 atk.c: $(ATK_DEFS) $(ATK_OVERRIDES)
 atk_la_CFLAGS = $(ATK_CFLAGS)
-atk_la_LIBADD = $(ATK_LIBS)
+atk_la_LIBADD = $(ATK_LIBS) $(PYTHON_LIBS)
 atk_la_LDFLAGS = $(common_ldflags) -export-symbols-regex initatk
 atk_la_SOURCES = atkmodule.c
 nodist_atk_la_SOURCES = atk.c
@@ -78,7 +81,7 @@ CLEANFILES += pango.c
 EXTRA_DIST += $(PANGO_DEFS) pango.override
 pango.c: $(PANGO_DEFS) pango.override
 pango_la_CFLAGS = $(PANGO_CFLAGS)
-pango_la_LIBADD = $(PANGO_LIBS)
+pango_la_LIBADD = $(PANGO_LIBS) $(PYTHON_LIBS)
 pango_la_LDFLAGS = $(common_ldflags) -export-symbols-regex initpango
 pango_la_SOURCES = pangomodule.c
 nodist_pango_la_SOURCES = pango.c
@@ -94,7 +97,7 @@ EXTRA_DIST += $(PANGOCAIRO_DEFS) pangocairo.override
 pangocairo.c: $(PANGOCAIRO_DEFS) pangocairo.override
 pangocairo_la_CFLAGS = $(PYCAIRO_CFLAGS) $(PANGOCAIRO_CFLAGS)
 pangocairo_la_LDFLAGS = $(common_ldflags) -export-symbols-regex initpangocairo
-pangocairo_la_LIBADD = $(PANGOCAIRO_LIBS)
+pangocairo_la_LIBADD = $(PANGOCAIRO_LIBS) $(PYTHON_LIBS)
 pangocairo_la_SOURCES = pangocairomodule.c
 nodist_pangocairo_la_SOURCES = pangocairo.c
 if BUILD_PANGOCAIRO
