@@ -380,14 +380,14 @@
     '("window" "ATK_XY_WINDOW")
   )
 )
-(define-flags HyperlinkStateFlags
-  (in-module "Atk")
-  (c-name "AtkHyperlinkStateFlags")
-  (gtype-id "ATK_TYPE_HYPERLINK_STATE_FLAGS")
-  (values
-    '("e" "ATK_HYPERLINK_IS_INLINE")
-  )
-)
+; (define-flags HyperlinkStateFlags
+;   (in-module "Atk")
+;   (c-name "AtkHyperlinkStateFlags")
+;   (gtype-id "ATK_TYPE_HYPERLINK_STATE_FLAGS")
+;   (values
+;     '("e" "ATK_HYPERLINK_IS_INLINE")
+;   )
+; )
 
 (define-enum TextClipType
   (in-module "Atk")
