@@ -2540,25 +2540,25 @@
   )
 )
 
-(define-method get_bounded_ranges
-  (of-object "AtkText")
-  (c-name "atk_text_get_bounded_ranges")
-  (return-type "AtkTextRange**")
-  (parameters
-    '("AtkTextRectangle*" "rect")
-    '("AtkCoordType" "coord_type")
-    '("AtkTextClipType" "x_clip_type")
-    '("AtkTextClipType" "y_clip_type")
-  )
-)
+; (define-method get_bounded_ranges
+;   (of-object "AtkText")
+;   (c-name "atk_text_get_bounded_ranges")
+;   (return-type "AtkTextRange**")
+;   (parameters
+;     '("AtkTextRectangle*" "rect")
+;     '("AtkCoordType" "coord_type")
+;     '("AtkTextClipType" "x_clip_type")
+;     '("AtkTextClipType" "y_clip_type")
+;   )
+; )
 
-(define-function text_free_ranges
-  (c-name "atk_text_free_ranges")
-  (return-type "none")
-  (parameters
-    '("AtkTextRange**" "ranges")
-  )
-)
+; (define-function text_free_ranges
+;   (c-name "atk_text_free_ranges")
+;   (return-type "none")
+;   (parameters
+;     '("AtkTextRange**" "ranges")
+;   )
+; )
 
 (define-method free
   (of-object "AtkAttributeSet")
