@@ -2,12 +2,12 @@
 # Run this to generate all the initial makefiles, etc.
 
 srcdir=`dirname $0`
-test -z "$srcdir" && srcdir=.
+srcdir=`cd $srcdir && pwd`
 
 REQUIRED_AUTOMAKE_VERSION=1.8
 
 PKG_NAME="PyGTK"
-ACLOCAL_FLAGS="-I `pwd`/m4 $ACLOCAL_FLAGS"
+ACLOCAL_FLAGS="-I $srcdir/m4 $ACLOCAL_FLAGS"
 
 #name of package
 PKG_NAME=${PKG_NAME:-Package}
