@@ -26839,7 +26839,7 @@
   (of-object "GtkWidget")
   (return-type "none")
   (parameters
-    '("GtkStyle*" "previous_style")
+    '("GtkStyle*" "previous_style" (null-ok))
   )
 )
 (define-virtual direction_changed
