@@ -1,3 +1,10 @@
+2007-06-16  Yevgen Muntyan  <muntyan@tamu.edu>
+
+	reviewed by: Gustavo J. A. M. Carneiro.
+
+	* codegen/argtypes.py: prepend const to const boxed return values
+	in generated code (#448111).
+
 2007-06-14  Sébastien Granjoux  <seb.sfo@free.fr>
 
 	reviewed and fixed by: Gustavo J. A. M. Carneiro.
